--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee"  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>cflow</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -144,7 +144,7 @@
     <servlet-name>XSaveWft</servlet-name>
     <url-pattern>/XSaveWft</url-pattern>
   </servlet-mapping>
-    <servlet>
+  <servlet>
     <description></description>
     <display-name>XSaveWorkflow</display-name>
     <servlet-name>XSaveWorkflow</servlet-name>
@@ -276,5 +276,15 @@
   <servlet-mapping>
     <servlet-name>TestSL1</servlet-name>
     <url-pattern>/TestSL1</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Navigate</display-name>
+    <servlet-name>Navigate</servlet-name>
+    <servlet-class>com.lkh.cflow.servlet.Navigate</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Navigate</servlet-name>
+    <url-pattern>/Navigate</url-pattern>
   </servlet-mapping>
 </web-app>
